samples/_failures_safe/1761545396_dd59d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3f287ee.c: In function ‘main’:
./samples/SAFE/__tmp_f3f287ee.c:154:29: error: expected ‘)’ at end of input
  154 |         free(compressed.data
      |             ~               ^
      |                             )
./samples/SAFE/__tmp_f3f287ee.c:154:9: error: expected declaration or statement at end of input
  154 |         free(compressed.data
      |         ^~~~
./samples/SAFE/__tmp_f3f287ee.c:154:9: error: expected declaration or statement at end of input
